made final fixes to team section css on spacing

--- a/css/teamcss/styles.css
+++ b/css/teamcss/styles.css
@@ -718,12 +718,12 @@ Colors:
 
 	/* Team */
 	.cards-3 .card:nth-of-type(4n+2) {
-		margin-right: 1.2rem;
-		margin-left: 2.2rem;
+		margin-right: -.5rem;
+		margin-left: 1rem;
 	}
 
 	.cards-3 .card:nth-of-type(4n+2) {
-		margin-right: 1.2rem;
+		margin-right: -.5rem;
 		margin-left: 1rem;
 	}
 	/* end of team */
